--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -5,21 +5,37 @@
 <table>
   <thead>
     <tr>
-      <th colspan="3"></th>
+      <td>Name</td>
+      <td>Instructor</td>
+      <td>Enrollments</td>
+      <td>Actions</td>
     </tr>
   </thead>
 
   <tbody>
     <% @courses.each do |course| %>
       <tr>
-        <td><%= link_to 'Show', course %></td>
-        <td><%= link_to 'Edit', edit_course_path(course) %></td>
-        <td><%= link_to 'Destroy', course, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td>
+          <%= course.name %>
+        </td>
+        <td>
+          <%= course.teacher.name %>
+        </td>
+        <td>
+          <%= course.enrollments.count %>
+        </td>
+        <td>
+          <%= link_to 'Show', course %>
+          <%= link_to 'Edit', edit_course_path(course) %>
+          <%= link_to 'Destroy', course, method: :delete, data: { confirm: 'Are you sure?' } %>
+        </td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
 <br>
+
+<%= paginate @courses %>
 
 <%= link_to 'New Course', new_course_path %>
