Use counter cache

--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -22,7 +22,7 @@
           <%= course.teacher.name %>
         </td>
         <td>
-          <%= course.enrollments.count %>
+          <%= course.enrollments_count %>
         </td>
         <td>
           <%= link_to 'Show', course %>
